# better_human

./: .gitignore  LICENSE  README.md  convert.py  pyproject.toml
scripts/: convert.py  mano_viser_demo.py  smpl_viser_demo.py  smplh_viser_demo.py  smplx_viser_demo.py  star_viser_demo.py
src/better_human/core/: humanoid.py
src/better_human/smpl/: __init__.py  base.py  dynamics.py  kinematics.py  mano.py  mass.py  sequence.py  smpl.py  smplh.py  smplx.py  star.py  visualize.py
src/better_human/smpl/config/: body_densities.json  mano.json  smpl.json  smpl_3d_segmentation.npy  smplh.json  smplx.json
src/better_human/smpl/model/: mano.py  smpl.py  smplh.py  smplx.py  star.py
src/better_human/utils/: lie.py
tests/: test_load.py
