[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "better_human"
version = "0.0.1"
authors = [
  { name="Rikhat Akizhanov", email="rikhat.akizhanov@mbzuai.ac.ae" },
]
description = "Collection of human models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "torch",
  "pypose",
  "viser",
  "trimesh",
  
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/rihat99/better_human"
Issues = "https://github.com/rihat99/better_human/issues"

[tool.setuptools.package-data]
"better_human.smpl.config" = ["*.yaml"]